--- a/lab4/lab4.html
+++ b/lab4/lab4.html
@@ -27,69 +27,59 @@
 			This is all my own work. I did not copy the code from any other
 			source
 		</p>
-		<div
-			id="plot"
+		<svg
+			id="svg"
 			style="width: 300px; height: 600px"
-		></div>
+		></svg>
 		<script>
-			var margin = { top: 20, right: 30, bottom: 30, left: 30 },
-				width = 300 - margin.left - margin.right,
-				height = 600 - margin.top - margin.bottom;
-
-			var svg = d3
-				.select("#plot")
-				.append("svg")
-				.attr("width", width + margin.left + margin.right)
-				.attr("height", height + margin.top + margin.bottom)
-				.append("g")
-				.attr(
-					"transform",
-					"translate(" + margin.left + "," + margin.top + ")"
-				);
-
-			const data = d3
-				.csv("https://tungth.github.io/data/vn-provinces-data.csv")
-				.then(function (data) {
-					var x = d3
+			const svg = d3.select("svg");
+			d3.csv("https://tungth.github.io/data/vn-provinces-data.csv").then(
+				(data) => {
+					const xScale = d3
 						.scaleLinear()
 						.domain([
 							0,
-							d3.max(data, function (d) {
-								return +d.population;
-							}),
+							d3.max(data, (d) => parseInt(d["GRDP-VND"])),
 						])
-						.range([0, width]);
-					svg.append("g")
-						.attr("transform", "translate(0," + height + ")")
-						.call(d3.axisBottom(x));
+						.range([0, 400]);
 
-					var y = d3
-						.scaleLinear()
-						.domain([
-							0,
-							d3.max(data, function (d) {
-								return +d["GRDP-VND"];
-							}),
-						])
-						.range([height, 0]);
-					svg.append("g").call(d3.axisLeft(y));
+					const yScale = d3
+						.scaleBand()
+						.domain(data.map((d) => d.province))
+						.range([0, 200])
+						.padding(0.1);
 
-					svg.append("g")
-						.selectAll("dot")
-						.data(data)
+					const g = svg
+						.append("g")
+						.attr("transform", "translate(50, 50)");
+
+					g.selectAll(".bar")
+						.data(data.slice(0, 21))
 						.enter()
-						.append("circle")
-						.attr("cx", function (d) {
-							return x(d.population);
-						})
-						.attr("cy", function (d) {
-							return y(d["GRDP-VND"]);
-						})
-						.attr("r", function (d) {
-							return d.area / 1000;
-						})
-						.style("fill", "#69b3a2");
-				});
+						.append("rect")
+						.classed("bar", true)
+						.attr("x", 0)
+						.attr("y", (d) => yScale(d.province))
+						.attr("width", (d) => xScale(parseInt(d["GRDP-VND"])))
+						.attr("height", yScale.bandwidth())
+						.attr("fill", "steelblue");
+
+					g.selectAll(".label")
+						.data(data.slice(0, 21))
+						.enter()
+						.append("text")
+						.classed("label", true)
+						.text((d) => d.province)
+						.attr("x", (d) => xScale(parseInt(d["GRDP-VND"])) + 5)
+						.attr(
+							"y",
+							(d) => yScale(d.province) + yScale.bandwidth() / 2
+						)
+						.attr("dy", "0.35em")
+						.attr("fill", "white")
+						.attr("text-anchor", "start");
+				}
+			);
 		</script>
 	</body>
 </html>
