--- a/project/index.html
+++ b/project/index.html
@@ -21,7 +21,7 @@
 		</style>
 	</head>
 	<body>
-		<div class="flex flex-col gap-4items-center w-full h-[100vh]">
+		<div class="flex flex-col gap-6 items-center w-full h-[100vh]">
 			<div
 				class="flex justify-end items-center w-full gap-4 p-3 border-b border-b-1 border-1-[#cbcbd4]"
 			>
@@ -56,9 +56,9 @@
 				</p>
 				
 			</div>
-			<div class="flex flex-col gap-4 items-center">
-				<!-- <div id="column"></div> -->
-				<p>The bar chart shows insights about the top 5 cities which host the most customers.</p>
+			<div class="flex flex-col gap-2 items-center">
+				<div id="col"></div>
+				<p class="text-gray text-lg p-3">The bar chart shows insights about the top 5 cities which hosts the most customers.</p>
 			</div>
 		</div>
 		<script>
@@ -94,7 +94,6 @@
 					return totalofyear
 				},
 				function (data) {
-					console.log(data)
 					const x = d3
 						.scaleBand()
 						.range([0, width])
@@ -151,6 +150,61 @@
 				}
 			);
 
+		</script>
+		<script>
+		var svgcol = d3.select("#col").append("svg")
+		  .attr("width", 980)
+		  .attr("height", 450)
+		  .append("g")
+		  .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+
+		d3.csv("customer.csv", function(data) {
+			var cityCounts = {};
+
+  data.forEach(function(d) {
+    var city = d["Customer City"];
+    if (city in cityCounts) {
+      cityCounts[city]++;
+    } else {
+      cityCounts[city] = 1;
+    }
+  });
+
+  var topCities = Object.keys(cityCounts)
+    .map(function(city) {
+      return { city: city, count: cityCounts[city] };
+    })
+    .sort(function(a, b) {
+      return d3.descending(a.count, b.count);
+    })
+    .slice(0, 5);
+
+  var x = d3.scaleBand()
+    .range([0, 800])
+    .domain(topCities.map(function(d) { return d.city; }))
+    .padding(0.1);
+
+  var y = d3.scaleLinear()
+    .range([height, 0])
+    .domain([0, d3.max(topCities, function(d) { return d.count; })]);
+
+  svgcol.selectAll("rect")
+    .data(topCities)
+    .enter()
+    .append("rect")
+    .attr("x", function(d) { return x(d.city); })
+    .attr("y", function(d) { return y(d.count); })
+    .attr("width", x.bandwidth())
+    .attr("height", function(d) { return height - y(d.count); })
+    .attr("fill", "steelblue");
+
+  svgcol.append("g")
+    .attr("transform", "translate(0," + height + ")")
+    .call(d3.axisBottom(x));
+
+  svgcol.append("g")
+    .call(d3.axisLeft(y));
+		  })
 		</script>
 	</body>
 </html>
