--- a/project/index.html
+++ b/project/index.html
@@ -18,6 +18,11 @@
 			svg {
 				border: 1px solid black;
 			}
+			body {
+				background: rgb(240, 162, 131);
+background: linear-gradient(0deg, rgb(255, 120, 120) 0%, rgba(223,159,64,0.6535656498927696) 50%, rgb(129, 255, 217) 100%);
+
+			}
 		</style>
 	</head>
 	<body>
@@ -56,9 +61,9 @@
 				</p>
 				
 			</div>
-			<div class="flex flex-col gap-2 items-center">
+			<div class="flex flex-col gap-2 items-center w-full max-w-[1280px]">
 				<div id="col"></div>
-				<p class="text-gray text-lg p-3">The bar chart shows insights about the top 5 cities which hosts the most customers.</p>
+				<p class="text-gray text-lg p-3 w-4/5">The bar chart shows insights about the top 5 cities which hosts the most customers. </br></br>From top down, London and Paris have the highest number of first purchase over the years. Other than those, the three next position belong to Beaverton, Bellflower and Burlingame</p>
 			</div>
 		</div>
 		<script>
@@ -117,8 +122,8 @@
 								([year, total]) => ({ year, total })
 							)
 						)
-						.attr("fill", "#cbcbd4")
-						.attr("stroke", "#69b3a2")
+						.attr("fill", "#F9AF28")
+						.attr("stroke", "#3BDB94")
 						.attr("d", area)
 						.attr(
 							"d",
@@ -196,7 +201,7 @@
     .attr("y", function(d) { return y(d.count); })
     .attr("width", x.bandwidth())
     .attr("height", function(d) { return height - y(d.count); })
-    .attr("fill", "steelblue");
+    .attr("fill", "rgb(18, 227, 221)");
 
   svgcol.append("g")
     .attr("transform", "translate(0," + height + ")")
