--- a/project/index.html
+++ b/project/index.html
@@ -20,38 +20,39 @@
 			}
 			body {
 				background: rgb(240, 162, 131);
-background: linear-gradient(0deg, rgb(255, 120, 120) 0%, rgba(223,159,64,0.6535656498927696) 50%, rgb(129, 255, 217) 100%);
-
+background: linear-gradient(0deg, rgba(255, 120, 120, 0.668) 0%, rgba(223,159,64,0.6535656498927696) 50%, rgba(129, 255, 217, 0.674) 100%);
+background-repeat: no-repeat;
+min-height: max-content;
 			}
 		</style>
 	</head>
 	<body>
-		<div class="flex flex-col gap-6 items-center w-full h-[100vh]">
+		<div class="flex flex-col gap-8 items-center w-full min-h-[100vh] mb-4">
 			<div
-				class="flex justify-end items-center w-full gap-4 p-3 border-b border-b-1 border-1-[#cbcbd4]"
+				class="flex justify-end items-center w-full gap-4 p-3"
+				style="box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;"
 			>
 				<a
 					href="#"
-					class="pb-1 border-b border-b-1 border-b-[#dedede]"
+					class="font-bold pb-1"
 					>Page 1
 				</a>
 				<a
 					href="#"
-					class="pb-1 border-b border-b-1 border-b-[#dedede]"
+					class="font-bold pb-1 "
 					>Page 2
 				</a>
 				<a
 					href="#"
-					class="pb-1 border-b border-b-1 border-b-[#dedede]"
+					class="font-bold pb-1"
 					>Page 3
 				</a>
 			</div>
-
 			<div
-				class="flex flex-wrap gap-4 justify-center w-full max-w-[1280px]"
+				class="flex items-center gap-4 justify-center w-full max-w-[1280px]"
 			>
-				<div id="area"></div>
-				<p class="text-gray text-lg w-2/5 p-3">
+				<div id="area" style="box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;"></div>
+				<p class="text-gray text-xl w-2/5 p-3 rounded-lg border border-2 border-dashed border-[#D64E34]" style="box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;">
 					The chart shows information about the growth of
 					customer-base over the period of 2015 - 2022 of a fictional
 					bike company. The data is taken from Microsoft's
@@ -59,11 +60,11 @@ background: linear-gradient(0deg, rgb(255, 120, 120) 0%, rgba(223,159,64,0.65356
 					increase from 2017 to 2018 and fluctuated greatly after
 					that, then went down steeply in 2020.
 				</p>
-				
 			</div>
 			<div class="flex flex-col gap-2 items-center w-full max-w-[1280px]">
-				<div id="col"></div>
-				<p class="text-gray text-lg p-3 w-4/5">The bar chart shows insights about the top 5 cities which hosts the most customers. </br></br>From top down, London and Paris have the highest number of first purchase over the years. Other than those, the three next position belong to Beaverton, Bellflower and Burlingame</p>
+				<h3>Top 5 cities with the most first purchase</h3>
+				<div id="col" style="box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;"></div>
+				<p class="text-gray text-lg p-3 w-[980px] rounded-lg border border-2 border-dashed border-[#D64E34]" style="box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;">The bar chart shows insights about the top 5 cities which hosts the most customers. </br></br>From top down, London and Paris have the highest number of first purchase over the years. Other than those, the three next position belong to Beaverton, Bellflower and Burlingame</p>
 			</div>
 		</div>
 		<script>
@@ -122,7 +123,7 @@ background: linear-gradient(0deg, rgb(255, 120, 120) 0%, rgba(223,159,64,0.65356
 								([year, total]) => ({ year, total })
 							)
 						)
-						.attr("fill", "#F9AF28")
+						.attr("fill", "rgba(120, 80, 110)")
 						.attr("stroke", "#3BDB94")
 						.attr("d", area)
 						.attr(
@@ -147,7 +148,7 @@ background: linear-gradient(0deg, rgb(255, 120, 120) 0%, rgba(223,159,64,0.65356
 						)
 						.enter()
 						.append("circle")
-						.attr("fill", "red")
+						.attr("fill", "#fa5d58")
 						.attr("stroke", "none")
 						.attr("cx", (d) => x(d.year) + x.bandwidth() / 2)
 						.attr("cy", (d) => y(d.total))
@@ -201,7 +202,7 @@ background: linear-gradient(0deg, rgb(255, 120, 120) 0%, rgba(223,159,64,0.65356
     .attr("y", function(d) { return y(d.count); })
     .attr("width", x.bandwidth())
     .attr("height", function(d) { return height - y(d.count); })
-    .attr("fill", "rgb(18, 227, 221)");
+    .attr("fill", "rgb(18, 207, 181)");
 
   svgcol.append("g")
     .attr("transform", "translate(0," + height + ")")
